lady macbeth fixed scrollbars appearing

--- a/ladymacbeth/style.css
+++ b/ladymacbeth/style.css
@@ -4,6 +4,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	//overflow: hidden;
+	overflow-x: hidden;
 }
 
 #home {
@@ -20,6 +21,7 @@ html, body {
 	width: 50%;
 	height: 100%;
 	left: 0;
+	overflow: hidden;
 }
 
 #homeLeft {
